Fix more jumping

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -86,9 +86,6 @@ main {
     p {
         margin: 5px 0;    
     }
-    pre {
-        font-size: 14px;
-    }
 }
 
 .template-engine-list {
